Added code that can trigger CPU load

--- a/CustomerManagerStandard/CustomerManager/app/customersApp/views/about.html
+++ b/CustomerManagerStandard/CustomerManager/app/customersApp/views/about.html
@@ -24,6 +24,12 @@
                 <div class="span2">Training:</div>
                 <div class="span9"><a href="mailto:training@thewahlingroup.com" target="_blank">Interested in hands-on AngularJS Training? Contact us for details.</a></div>
             </div>
+            <br />
+            <div class="row">
+                <div class="span12">
+                    <a ng-click="vm.causeCpuLoad()">Cause CPU Load for 2 minutes</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
